k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec: #our pod wants a volume available that matches these specs
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage #mount this volume to my container (described above)
              mountPath: /var/lib/postgresql/data #where inside container this storage should be made available (data directory of postgres where it stores all data)
              subPath: postgres #all postgres data will be stored in a folder named 'postgres' on the persistent volume
