k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000 #port exposed on pod using which other pods can connect
      targetPort: 3000 #port exposed on the target container
